--- a/kubernetes/cluster0/apps/networking/traefik/dashboard/dashboard-ingressroute.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/dashboard/dashboard-ingressroute.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.io/v1alpha1
+apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: traefik-dashboard-addprefix
@@ -9,7 +9,7 @@ spec:
 
 ---
 
-apiVersion: traefik.io/v1alpha1
+apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: traefik-dash-ingress
