--- a/kubernetes/cluster0/apps/networking/traefik/external-services/nas0-networking.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/external-services/nas0-networking.yaml
@@ -12,7 +12,7 @@ spec:
   externalName: "${NAS0_IP}"
 
 # ---
-# apiVersion: traefik.io/v1alpha1
+# apiVersion: traefik.containo.us/v1alpha1
 # kind: IngressRoute
 # metadata:
 #   name: nas0-externalroute
