--- a/kubernetes/cluster0/apps/networking/external-dns/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/external-dns/app/helm-release.yaml
@@ -31,8 +31,9 @@ spec:
             name: external-dns-cloud-credentials
             key: api-key
     extraArgs:
+      - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
+      - --crd-source-kind=DNSEndpoint
       - --cloudflare-proxied
-      - --annotation-filter=external-dns/is-public in (true)
     policy: sync
     sources:
       - ingress
