add crd back in for externaldns

--- a/kubernetes/cluster0/apps/networking/external-dns/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/external-dns/app/helm-release.yaml
@@ -37,6 +37,7 @@ spec:
     policy: sync
     sources:
       - ingress
+      - crd
     txtPrefix: "k8s."
     txtOwnerId: "default"
     domainFilters:
