--- a/kubernetes/cluster0/apps/home/home-assistant/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/home-assistant/app/helm-release.yaml
@@ -14,7 +14,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -27,9 +27,9 @@ spec:
       retries: 5
   values:
     controllers:
-      main:
+      app:
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/home-assistant/home-assistant
               tag: 2024.5.4
@@ -44,38 +44,14 @@ spec:
               requests:
                 cpu: 47m
                 memory: 1254M
-          codeserver:
-            image:
-              repository: ghcr.io/coder/code-server
-              tag: 4.89.1
-            env:
-              TZ: "${TIMEZONE}"
-            args:
-              - --auth
-              - "none"
-              - --user-data-dir
-              - "/config/.vscode"
-              - --extensions-dir
-              - "/config/.vscode"
-              - --port
-              - "12321"
-              - "/config"
-            resources:
-              requests:
-                cpu: 10m
-                memory: 110M
     service:
-      main:
+      app:
+        controller: app
         ports:
           http:
             port: 8123
-      codeserver:
-        controller: main
-        ports:
-          http:
-            port: 12321
     ingress:
-      main:
+      app:
         enabled: true
         ingressClassName: "traefik"
         annotations:
@@ -90,7 +66,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: http
     persistence:
       config:
@@ -98,10 +74,5 @@ spec:
         existingClaim: pvc-home-assistant
         retain: true
         enabled: true
-        advancedMounts:
-          main:
-            main:
-              - path: /config
-            codeserver:
-              - path: /config
-            
+        globalMounts:
+          - path: /config
