--- a/kubernetes/cluster0/apps/home/zigbee2mqtt/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/zigbee2mqtt/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -27,7 +27,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/koenkk/zigbee2mqtt
               tag: 1.37.1
@@ -37,7 +37,8 @@ spec:
             securityContext:
               privileged: true
     service:
-      main:
+      app:
+        controller: main
         ports:
           http:
             port: 8080
@@ -56,7 +57,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: http
     persistence:
       # config:
