--- a/kubernetes/cluster0/apps/media/jellyfin/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/jellyfin/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -30,7 +30,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               repository: jellyfin/jellyfin
               tag: 10.9.2
@@ -45,7 +45,8 @@ spec:
               limits:
                 gpu.intel.com/i915: 1
     service:
-      main:
+      app:
+        controller: main
         ports:
           http:
             port: 8096
@@ -54,32 +55,24 @@ spec:
         enabled: true
         ingressClassName: "traefik"
         annotations:
-          hajimari.io/enable: "true"
-          hajimari.io/icon: "play-network"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-          external-dns/is-public: "true"
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: http
     persistence:
       config:
-        enabled: true
-        storageClass: longhorn
         existingClaim: pvc-jellyfin
-        accessMode: ReadWriteOnce
-        retain: true
         advancedMounts:
           main:
             main:
               - path: /config
       movies:
-        enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/Films
@@ -88,7 +81,6 @@ spec:
             main:
               - path: /movies
       tv:
-        enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/TV-Series
@@ -97,7 +89,6 @@ spec:
             main:
               - path: /tv
       transcode:
-        enabled: true
         type: emptyDir
         advancedMounts:
           main:
