--- a/kubernetes/cluster0/apps/media/lidarr/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/lidarr/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -27,7 +27,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               repository: lscr.io/linuxserver/lidarr
               tag: 1.0.2.2592-ls101
@@ -41,41 +41,33 @@ spec:
               runAsGroup: 0
               fsGroup: 0
     service:
-      main:
+      app:
+        controller: main
         ports:
           http:
             port: 8686
     ingress:
       main:
-        enabled: true
-        ingressClassName: "traefik"
         annotations:
-          hajimari.io/enable: "true"
-          hajimari.io/icon: "playlist-music"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd #,lidarr-theme@file
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-          external-dns/is-public: "true"
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: http
     persistence:
       config:
-        enabled: true
-        storageClass: longhorn
         existingClaim: pvc-lidarr
-        retain: true
         advancedMounts:
           main:
             main:
               - path: /config
       music:
-        enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/Music
@@ -84,7 +76,6 @@ spec:
             main:
               - path: /music
       downloads:
-        enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/downloads
