--- a/kubernetes/cluster0/apps/media/overseerr/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/overseerr/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -27,7 +27,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/sct/overseerr
               tag: 1.33.2
@@ -39,31 +39,26 @@ spec:
                 cpu: 100m
                 memory: 250Mi
     service:
-      main:
+      app:
+        controller: main
         ports:
           http:
             port: 5055
     ingress:
-        main:
-          enabled: true
-          ingressClassName: "traefik"
-          annotations:
-            hajimari.io/enable: "true"
-            hajimari.io/icon: "eye-circle"
-            traefik.ingress.kubernetes.io/router.entrypoints: websecure
-            external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-            external-dns/is-public: "true"
-          hosts:
-            - host: requests.${SECRET_PUBLIC_DOMAIN}
-              paths:
-                - path: /
-                  pathType: Prefix
-                  service:
-                    name: main
-                    port: http
+      main:
+        annotations:
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+        hosts:
+          - host: requests.${SECRET_PUBLIC_DOMAIN}
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  identifier: app
+                  port: http
     persistence:
       config:
-        enabled: true
         existingClaim: pvc-overseerr
         advancedMounts:
           main:
