--- a/kubernetes/cluster0/apps/media/plex/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/plex/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -30,7 +30,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               # renovate: datasource=docker image=docker.io/plexinc/pms-docker
               repository: docker.io/plexinc/pms-docker
@@ -50,7 +50,8 @@ spec:
               limits:
                 gpu.intel.com/i915: 1
     service:
-      main:
+      app:
+        controller: main
         type: LoadBalancer
         annotations:
           io.cilium/lb-ipam-ips: ${PLEX_IP}
@@ -62,26 +63,19 @@ spec:
             port: 32400
     ingress:
       main:
-        enabled: true
-        ingressClassName: "traefik"
         annotations:
-          hajimari.io/enable: "true"
-          hajimari.io/icon: "plex"
-          # traefik.ingress.kubernetes.io/router.middlewares: plex-theme@file
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-          external-dns/is-public: "true"
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: http
     persistence:
       config:
-        enabled: true
         storageClass: longhorn
         existingClaim: pvc-plex0
         accessMode: ReadWriteOnce
@@ -91,7 +85,6 @@ spec:
             main:
               - path: /config
       tmp:
-        enabled: true
         type: emptyDir
         medium: Memory
         advancedMounts:
@@ -99,7 +92,6 @@ spec:
             main:
               - path: /tmp
       movies:
-        enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/Films
@@ -108,7 +100,6 @@ spec:
             main:
               - path: /movies
       tv:
-        enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/TV-Series
@@ -117,7 +108,6 @@ spec:
             main:
               - path: /tv
       music:
-        enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/Music
@@ -126,7 +116,6 @@ spec:
             main:
               - path: /music
       transcode:
-        enabled: true
         type: emptyDir
         advancedMounts:
           main:
