--- a/kubernetes/cluster0/apps/media/qbittorrent/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/qbittorrent/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -28,7 +28,7 @@ spec:
       main:
         containers:
           # do the torrent thing
-          main:
+          app:
             nameOverride: qbittorrent
             image:
               repository: ghcr.io/onedr0p/qbittorrent
@@ -76,50 +76,43 @@ spec:
             runAsUser: 0
             supplementalGroups: [100,10000]
     service: 
-      main:
+      app:
+        controller: main
         ports:
           http:
             port: *port
     ingress:
       main:
-        enabled: true
-        ingressClassName: "traefik"
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd #,lidarr-theme@file
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-          external-dns/is-public: "true"
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: http
     persistence:
       config:
-        storageClass: longhorn
         existingClaim: pvc-qbittorrent
-        retain: true
-        enabled: true
         advancedMounts:
           main:
-            main:
+            app:
               - path: /config
       downloads:
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/downloads
-        enabled: true
         advancedMounts:
           main:
-            main:
+            app:
               - path: /downloads
       dnsdist-config:
         type: configMap
         name: qbittorrent-dnsdist
-        enabled: true
         advancedMounts:
           main:
             dnsdist:
@@ -128,7 +121,6 @@ spec:
                 readOnly: true
       gluetun-data:
         type: emptyDir
-        enabled: true
         advancedMounts:
           main:
             gluetun:
