fix overseer persist

--- a/kubernetes/cluster0/apps/media/overseerr/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/overseerr/app/helm-release.yaml
@@ -62,5 +62,5 @@ spec:
         existingClaim: pvc-overseerr
         advancedMounts:
           main:
-            main:
+            app:
               - path: /app/config
