--- a/kubernetes/cluster0/apps/media/radarr/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/radarr/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -27,7 +27,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               repository: lscr.io/linuxserver/radarr
               tag: "5.6.0"
@@ -41,54 +41,45 @@ spec:
               runAsGroup: 0
               fsGroup: 0
     service:
-      main:
+      app:
+        controller: main
         ports:
           http:
             port: 7878
     ingress:
       main:
-        enabled: true
-        ingressClassName: "traefik"
         annotations:
-          hajimari.io/enable: "true"
-          hajimari.io/icon: "movie"
           traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd #,radarr-theme@file
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-          external-dns/is-public: "true"
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: http
     persistence:
       config:
-        enabled: true
-        storageClass: longhorn
         existingClaim: pvc-radarr
-        retain: true
         advancedMounts:
           main:
-            main:
+            app:
               - path: /config
       movies:
-        enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/Films
         advancedMounts:
           main:
-            main:
+            app:
               - path: /movies
       downloads:
-        enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/downloads
         advancedMounts:
           main:
-            main:
+            app:
               - path: /downloads
