--- a/kubernetes/cluster0/apps/media/sabnzbd/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/sabnzbd/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -28,7 +28,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               repository: lscr.io/linuxserver/sabnzbd
               tag: "4.3.1"
@@ -41,42 +41,36 @@ spec:
               fsGroup: 0
     service:
       main:
+        controller: main
         ports:
           http:
             port: 8080
     ingress:
       main:
-        enabled: true
-        ingressClassName: "traefik"
         annotations:
           traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd #,sabnzbd-theme@file
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "tun.${SECRET_PUBLIC_DOMAIN}"
-          external-dns/is-public: "true"
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: http
     persistence:
       config:
-        enabled: true
-        storageClass: longhorn
         existingClaim: pvc-sabnzbd
-        retain: true
         advancedMounts:
           main:
-            main:
+            app:
               - path: /config
       downloads:
-        enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/downloads
         advancedMounts:
           main:
-            main:
+            app:
               - path: /downloads
