fix sabnzbd servicename

--- a/kubernetes/cluster0/apps/media/sabnzbd/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/sabnzbd/app/helm-release.yaml
@@ -40,7 +40,7 @@ spec:
               runAsGroup: 0
               fsGroup: 0
     service:
-      main:
+      app:
         controller: main
         ports:
           http:
