--- a/kubernetes/cluster0/apps/media/syncthing/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/syncthing/app/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -26,7 +26,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               repository: syncthing/syncthing
               tag: 1.27.7
@@ -35,14 +35,13 @@ spec:
                   cpu: 15m
                   memory: 249Mi
     service:
-      main:
-        enabled: true
+      app:
+        controller: main
         ports:
           http:
             port: 8384
       listdisc:
         controller: main
-        enabled: true
         type: LoadBalancer
         annotations:
           io.cilium/lb-ipam-ips: ${SYNC_ENDPOINT}
@@ -59,26 +58,21 @@ spec:
     ingress:
       # main:
       #   enabled: true
-      #   ingressClassName: "traefik"
       #   annotations:
       #     # traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd
       #     traefik.ingress.kubernetes.io/router.entrypoints: websecure
       #     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-      #     external-dns/is-public: "true"
       #   hosts:
       #     - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
       #       paths:
       #         - path: /
       #           pathType: Prefix
       #          service:
-      #            name: main
+      #            identifier: app
       #            port: http
     persistence:
       config:
-        enabled: true
-        storageClass: longhorn
         existingClaim: pvc-syncthing
-        retain: true
         advancedMounts:
           main:
             main:
