--- a/kubernetes/cluster0/apps/monitoring/uptime-kuma/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/monitoring/uptime-kuma/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -27,7 +27,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               repository: louislam/uptime-kuma
               tag: "1.23.13"
@@ -36,35 +36,28 @@ spec:
               UPTIME_KUMA_PORT: 3001
               UPTIME_KUMA_DISABLE_FRAME_SAMEORIGIN: 0
     service:
-      main:
+      app:
+        controller: main
         ports:
           http:
             port: 3001
     ingress:
       main:
-        enabled: true
-        ingressClassName: "traefik"
         annotations:
-          hajimari.io/enable: "true"
-          hajimari.io/icon: "robot-happy"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-          external-dns/is-public: "true"
         hosts:
           - host: &host "uptime.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: http
     persistence:
       config:
-        enabled: true
-        storageClass: longhorn
         existingClaim: pvc-uptime-kuma
-        retain: true
         advancedMounts:
           main:
-            main:
+            app:
               - path: /app/data
