fix config on mosquitto

--- a/kubernetes/cluster0/apps/home/mosquitto/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/mosquitto/app/helm-release.yaml
@@ -59,11 +59,10 @@ spec:
             connection_messages false
     persistence:
       config:
-        enabled: true
         type: configMap
         name: mosquitto-config
         advancedMounts:
           main:
-            main:
+            app:
               - path: /mosquitto/config/mosquitto.conf
                 subPath: mosquitto.conf
