--- a/kubernetes/cluster0/apps/networking/error-pages/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/error-pages/app/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -28,7 +28,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/tarampampam/error-pages
               tag: 2.27.0
@@ -40,7 +40,8 @@ spec:
                 memory: 100Mi
                 cpu: 100m
     service:
-      main:
+      app:
+        controller: main
         ports:
           http:
             port: 8080
