--- a/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: authelia
-      version: 0.8.58
+      version: 0.9.0-beta3
       sourceRef:
         kind: HelmRepository
         name: authelia-charts
@@ -44,6 +44,8 @@ spec:
       traefikCRD:
         enabled: true
         disableIngressRoute: true
+        apiGroupOverride: 'traefik.io'
+        apiVersionOverride: 'v1alpha1'
         entryPoints: 
           - websecure
     pod:
