--- a/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
       traefikCRD:
         enabled: true
-        disableIngressRoute: false
+        disableIngressRoute: true
         apiGroupOverride: 'traefik.io'
         apiVersionOverride: 'v1alpha1'
         entryPoints: 
