--- a/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    LDAP_ADMIN_PASSWORD: ENC[AES256_GCM,data:Up9ZriL/Lh6xkmXuqg/yBY82NQtMzJK666nNJrCF,iv:mcbL/mcwjo3z/U11RnFAV/rHhma7EnXOeGiOSCucswI=,tag:JUBWnx/tBfVeCr+UQvw5Yg==,type:str]
-    redis_password: ENC[AES256_GCM,data:4J87pde9oOlUuJyjt/idwYUdHsU2MchLabbdV5d1,iv:TWJQ9VPiCNl8vSMqSyq2zYIdT8hVLO/cIzzkMf+Wrhk=,tag:4j2IY6P4wt1xDUOarZJpJg==,type:str]
-    authelia_jwt: ENC[AES256_GCM,data:bekE8D3IRHJNDnInb/Zvu5gH6+IaXS3xxQf3st2vx8taHWps8k5xjTc2Ly74sMeQBvBZZmFdQbh8iNFyTDvpC19tL+FoS0tu126i40GUMuxOg14I5Rp4GPhD,iv:oIKiMhOmXrt641H0tL1zav/o4hI7k5hwPshJTZdTSWs=,tag:9sTRVbEYvmkxbwRE0W8UEQ==,type:str]
-    postgresql_password: ENC[AES256_GCM,data:F32mu2V30JXhhDli8IMKsZjeRyEJsjesGsTislx8,iv:J26+yB373dIxafrunJR7+q7pnR/pdQFP7GmSv+Lq+mE=,tag:OQGabN0JxJJSjksARsZ8wQ==,type:str]
-    session_encryption_key: ENC[AES256_GCM,data:weHRGHMYqKJ/1KCrx3/ZggMdCqgyx4CXGDdhd16v,iv:Q70HQD89yR9gqVnVCvvvwUStPwMeDjD93oBECaBKEuY=,tag:bQp8FE1I8osp7Wk+YYKTpA==,type:str]
-    storage_encryption_key: ENC[AES256_GCM,data:HICK3flFlm+XZg3niqCnPNzgldy5+OAAIFmSPvDM,iv:x9vnJkIPrGtfqAcYFQWS95LfQ+x5J5y9r4HB4SBi8fU=,tag:Z4JPHyP8b+JmH57Q2tzxEQ==,type:str]
+    LDAP_ADMIN_PASSWORD: ENC[AES256_GCM,data:qV1YcQyWgxrvVVBUfXAqYDuANoF7tLoqIhlJYSvB,iv:CT09Sb9bdcefR6+PYQSR6QGm4Yrsm3UueEANwkCtfsY=,tag:uRg0R4I3E9ruxZZhc5fLrA==,type:str]
+    redis_password: ENC[AES256_GCM,data:9RbC6l+7Fsa/XyLiIHL/AZsKj1070jSDO+IvnTg9,iv:aUr39uGTBfR6ujbOvFu3Fxl9DICTGDCNh432fa7EDzs=,tag:sCClYa05AkzCcUTwu038KA==,type:str]
+    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:dQ7w00SUwkYAJzp+xRfA4dIO+OWrPZ47VS/2GVty956j1/IhCCbHheUPgVlYcM1/9rqzIet/MOR3bOA1cptHtvHjfIF6I9JlqBFbKeywLcUTTHjQWbYK4qDG,iv:a9vno0SZXz18kTC+jWHKFWuNhOQSacXu7oGk8O45yJ0=,tag:p1YrTdTvbDsdfpcvT0PhFQ==,type:str]
+    postgresql_password: ENC[AES256_GCM,data:odW31M/Yr2fJM0omqlK0iE/r5oQRiVWGwK9V1w6I,iv:6W9iiuNvHVn/mkZkssFD8xY0uZSyb+iRYQB7vNkrCZw=,tag:zs38nLLV38mLWdUqcriltw==,type:str]
+    session_encryption_key: ENC[AES256_GCM,data:g9RXaJK4piTPRva3YH4NeZYzSJ23/8ZCZvX68Ggm,iv:WzyJsi71F7haX2NKkiQL8SUwStHQlyQ4D/IXiM+SwG8=,tag:FZ5DQ2m/kdGuYIYVdIdm+g==,type:str]
+    storage_encryption_key: ENC[AES256_GCM,data:Uaux+0r+5hg7ofZhXZIeMdPsG2FsbADv5Tn/CCJG,iv:b7aGN9BzmscvJxKnEec2KcJY7/irVXaYnrHw5Xs8EII=,tag:VZ1vbXNTD0wyFWJbbeWcXA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +20,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPN0ZvOEx0cVo5QW0rLzNT
-            ajMySVI3Q1lCM1lQMlIyQXVLN0Q0RDR5V1FjClpSaUl2NFBSSzBOeEh2VWhHLzlW
-            UG1ZVE44Y2p0NGFOcXBWeGVVSXp1eHMKLS0tIGI4OGRNME9IRGd2bUo5dTRKenJY
-            TEllMXdBOHlIOE5kQnBhK0dLVnNLc28KzJRV6yzoK1lfH37T0AVV3c7oK9efq4z3
-            8WN7/FLiiRtSUeuY+682hBOX7JYTCtg6+YuYukbJyxS9LhawEa1Suw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAycHFxVUUwQUdlSFFsTmtz
+            TnozVndpME0yS1B3MzJOQ3VscHA1Lzg3dFJjCnpPbW01cnQ1cTIxbFMxUlF1WVd0
+            QmZXalhKM1g3ZDNKMVMyNDZNTWd2WjAKLS0tIFRpdllUekgweEF0WFBHVVU2OGg4
+            cyszbWlJWEdZWE5jSGFIa3lmTmZudmMKYmrAa9sORqlM8TcJep5X4DprObYLdfD3
+            IvmLwuVw1HvyhkwC67k9YNSwtYlLRkq1zv0je3I0SNNIH9KfuwEGQw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-17T23:04:20Z"
-    mac: ENC[AES256_GCM,data:M81rTEXloPt8MMBAYrsWVpoSjWvSypuk8/v+o9MnKblMj7xT43Z8rlO6UKMMp6gJdfvaxuOAGXiH5TcWBtIWwR+ldFhgrcEWogBmKJTGPafN7GmwwytSDrcA5s/FRt53Rb5D3SK5sunDSM31wZ7Q/givcDHuUtlqfGiqC/6KOGA=,iv:WfJGT1vFQdSjuUMe+9dtt6EAJfaxh8oxT9va1GOo+J0=,tag:XpaUdQj/NTEIi/xzAE6ncA==,type:str]
+    lastmodified: "2024-05-18T03:51:46Z"
+    mac: ENC[AES256_GCM,data:nFhZKb7xKLdPpEMRy5mdgGW0mPTIovDvdb+ZfMS0FtviGeWP9Yu2ZH2Bpdu1HWvIqteHUYNhA8PoFBM1xcyyXWZ+goA4ObmWC0hC8FLMX/LAU3gapDhZx0LoKvc3nbz32p2mlLianki2uggoF2ZER+EkA0jlaozHrIZika2UpzY=,iv:UuGnZNbLjFxZRCs38jjOx1E1lpC6NXpb6Kye4wrebAA=,tag:GND4BCLG29tMtJfSl1e7SQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
