whackamole with secret names

--- a/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    LDAP_ADMIN_PASSWORD: ENC[AES256_GCM,data:qV1YcQyWgxrvVVBUfXAqYDuANoF7tLoqIhlJYSvB,iv:CT09Sb9bdcefR6+PYQSR6QGm4Yrsm3UueEANwkCtfsY=,tag:uRg0R4I3E9ruxZZhc5fLrA==,type:str]
-    redis_password: ENC[AES256_GCM,data:9RbC6l+7Fsa/XyLiIHL/AZsKj1070jSDO+IvnTg9,iv:aUr39uGTBfR6ujbOvFu3Fxl9DICTGDCNh432fa7EDzs=,tag:sCClYa05AkzCcUTwu038KA==,type:str]
-    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:dQ7w00SUwkYAJzp+xRfA4dIO+OWrPZ47VS/2GVty956j1/IhCCbHheUPgVlYcM1/9rqzIet/MOR3bOA1cptHtvHjfIF6I9JlqBFbKeywLcUTTHjQWbYK4qDG,iv:a9vno0SZXz18kTC+jWHKFWuNhOQSacXu7oGk8O45yJ0=,tag:p1YrTdTvbDsdfpcvT0PhFQ==,type:str]
-    postgresql_password: ENC[AES256_GCM,data:odW31M/Yr2fJM0omqlK0iE/r5oQRiVWGwK9V1w6I,iv:6W9iiuNvHVn/mkZkssFD8xY0uZSyb+iRYQB7vNkrCZw=,tag:zs38nLLV38mLWdUqcriltw==,type:str]
-    session_encryption_key: ENC[AES256_GCM,data:g9RXaJK4piTPRva3YH4NeZYzSJ23/8ZCZvX68Ggm,iv:WzyJsi71F7haX2NKkiQL8SUwStHQlyQ4D/IXiM+SwG8=,tag:FZ5DQ2m/kdGuYIYVdIdm+g==,type:str]
-    storage_encryption_key: ENC[AES256_GCM,data:Uaux+0r+5hg7ofZhXZIeMdPsG2FsbADv5Tn/CCJG,iv:b7aGN9BzmscvJxKnEec2KcJY7/irVXaYnrHw5Xs8EII=,tag:VZ1vbXNTD0wyFWJbbeWcXA==,type:str]
+    LDAP_ADMIN_PASSWORD: ENC[AES256_GCM,data:SxjYZJIGWxBOG171qeaCM49vIlXdCKoh/lE6nfAo,iv:4nTLTx3ZhOXbjQeoml1gOqiP6PmgCb/nQv0uGQIseRw=,tag:Pwz4wl9OmDJKcJV1MxspUg==,type:str]
+    redis_password: ENC[AES256_GCM,data:BZfogyk0/vVfw0iGk9l3BejodY0Q+6iluR/pLElC,iv:N7ur6VqcxEFJJPEbG0BioUEfStu52cAxgFa8esIN8rA=,tag:00EoTYQY4/D4Rm7WXvzH7Q==,type:str]
+    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:KNqiYCERu8sS5bJAsyaZIizwN8Ng7UJOJGxHMXU94MmKf88fAL1wwxHkUD3MVvZogqZCd4HEpIXEh02YukwR2oUCS+LIZBi7fiF/zpMfJjwM1s/7RcHcrToD,iv:HPdJkHvqqjMDoTtK9GjgzPm2IKR+9++w+CncClYFqc8=,tag:Ulu9cCG26zyS6zWhJNvzXQ==,type:str]
+    postgresql_password: ENC[AES256_GCM,data:crBDLyB0GeYjlcyOgERlaXv9kVKpVQ8crs/CDXIp,iv:S7V4svWLF2NGn1svFoy6xE03fALcXHn4KInC8lyg1k0=,tag:BsCjDomabtm5isuWxbBmeA==,type:str]
+    session.encryption.key: ENC[AES256_GCM,data:x/xqzjZUyo6bW0UcvQ+LlsP3c08NUzlroyUKvRv4,iv:hFxyLuFPWWN/6w8BQbd1owIi+kvfBGJQU6+cmHqRIDA=,tag:7VsuabFBYfHGhvHr/dSvVw==,type:str]
+    storage.encryption.key: ENC[AES256_GCM,data:B/tZDl4R9WL/pTIUoTVk64tqH/EKV8gnN0c+owra,iv:UIQ1MZ302/lyOHLYcJaCNYrp8lnwSP5rBRguNXX/Ts0=,tag:tm9MjYhjJpkGIpWclmPJ8w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +20,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAycHFxVUUwQUdlSFFsTmtz
-            TnozVndpME0yS1B3MzJOQ3VscHA1Lzg3dFJjCnpPbW01cnQ1cTIxbFMxUlF1WVd0
-            QmZXalhKM1g3ZDNKMVMyNDZNTWd2WjAKLS0tIFRpdllUekgweEF0WFBHVVU2OGg4
-            cyszbWlJWEdZWE5jSGFIa3lmTmZudmMKYmrAa9sORqlM8TcJep5X4DprObYLdfD3
-            IvmLwuVw1HvyhkwC67k9YNSwtYlLRkq1zv0je3I0SNNIH9KfuwEGQw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3TkJlQ3JhdUU0emtuRVdH
+            cC9ja0d0TytIOHAxdkZHbGkrNk0yQWVhM0hnCmtlbVg5TjFUS3h0bmRRdVdXMUpB
+            bVhWRHBvVEwrcDRSSmJPRG1TSHV0N3MKLS0tIEdYVDVWNTk3YW5jQkFSTDVUcEQx
+            MHhvUXNmTTFaYklqOUVDL1dzTVZDTGsKwQ4lREmBjKaMmdo5QVRfwEp0yNZO2r4S
+            FPNSuvGw+8LfJwNBdXH79p1bgIB4/jpWZ/idUKZTShRGPHsf/6m2TA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-18T03:51:46Z"
-    mac: ENC[AES256_GCM,data:nFhZKb7xKLdPpEMRy5mdgGW0mPTIovDvdb+ZfMS0FtviGeWP9Yu2ZH2Bpdu1HWvIqteHUYNhA8PoFBM1xcyyXWZ+goA4ObmWC0hC8FLMX/LAU3gapDhZx0LoKvc3nbz32p2mlLianki2uggoF2ZER+EkA0jlaozHrIZika2UpzY=,iv:UuGnZNbLjFxZRCs38jjOx1E1lpC6NXpb6Kye4wrebAA=,tag:GND4BCLG29tMtJfSl1e7SQ==,type:str]
+    lastmodified: "2024-05-18T04:10:08Z"
+    mac: ENC[AES256_GCM,data:StDcC4q35jQD3gC18IjOuZU9WnOLMoOweTF2C6wDCEpi23B/PXWSYP2ZTihG4OtMVnBpjnRsW+Y92g0Hkl9d6ydJJGtQ1gZnojh4P2UabWlkVIDs10OJT/2m2bGFX2YMo81OoZ+wbzgkvJ+J201j57BAST0jY9fR3n4X0UvgzlE=,iv:tFV95ejduX0hyBhZvuwrjY42CPrLX8Ane0XI1WJZgFo=,tag:wHfXlhtVj1ZokcxpW7mfwg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
