--- a/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    LDAP_ADMIN_PASSWORD: ENC[AES256_GCM,data:SxjYZJIGWxBOG171qeaCM49vIlXdCKoh/lE6nfAo,iv:4nTLTx3ZhOXbjQeoml1gOqiP6PmgCb/nQv0uGQIseRw=,tag:Pwz4wl9OmDJKcJV1MxspUg==,type:str]
-    redis_password: ENC[AES256_GCM,data:BZfogyk0/vVfw0iGk9l3BejodY0Q+6iluR/pLElC,iv:N7ur6VqcxEFJJPEbG0BioUEfStu52cAxgFa8esIN8rA=,tag:00EoTYQY4/D4Rm7WXvzH7Q==,type:str]
-    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:KNqiYCERu8sS5bJAsyaZIizwN8Ng7UJOJGxHMXU94MmKf88fAL1wwxHkUD3MVvZogqZCd4HEpIXEh02YukwR2oUCS+LIZBi7fiF/zpMfJjwM1s/7RcHcrToD,iv:HPdJkHvqqjMDoTtK9GjgzPm2IKR+9++w+CncClYFqc8=,tag:Ulu9cCG26zyS6zWhJNvzXQ==,type:str]
-    postgresql_password: ENC[AES256_GCM,data:crBDLyB0GeYjlcyOgERlaXv9kVKpVQ8crs/CDXIp,iv:S7V4svWLF2NGn1svFoy6xE03fALcXHn4KInC8lyg1k0=,tag:BsCjDomabtm5isuWxbBmeA==,type:str]
-    session.encryption.key: ENC[AES256_GCM,data:x/xqzjZUyo6bW0UcvQ+LlsP3c08NUzlroyUKvRv4,iv:hFxyLuFPWWN/6w8BQbd1owIi+kvfBGJQU6+cmHqRIDA=,tag:7VsuabFBYfHGhvHr/dSvVw==,type:str]
-    storage.encryption.key: ENC[AES256_GCM,data:B/tZDl4R9WL/pTIUoTVk64tqH/EKV8gnN0c+owra,iv:UIQ1MZ302/lyOHLYcJaCNYrp8lnwSP5rBRguNXX/Ts0=,tag:tm9MjYhjJpkGIpWclmPJ8w==,type:str]
+    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:3dpn59nCCv0/e32jh07/Hvr8eWq9vT67UzpGSa6cnlEs2bNbkDOEYUssQPFWkReEMRWhB7LqkEgc8AoTyBYarNfBGDiqcdLTQHq5WbKYlNIiA5cUMqML+uAR,iv:fvwcVkRHqrX1TTW92/zFLTkQbZNWZ5CGhHamgoSx/z0=,tag:dV2D208H71alp3BWljcy+A==,type:str]
+    session.encryption.key: ENC[AES256_GCM,data:9ROvvuIVESSqJMsN03UqMPzcTuiNJuIHYuKqjbtf,iv:mAfjdRHgszVuSmqv76D0UCc23lUFAYlDbx2I+6u8Cug=,tag:oeMCo7o6bLvRQtLBs1oGbQ==,type:str]
+    session.redis.password: ENC[AES256_GCM,data:E+ZJvtqBTBl6hBn01Do/47YX4BuslRZrAfKj1kAW,iv:P4qoPEsHZwsmp43tP9sK8HKd2kjUGMAw//uxA8rKCF4=,tag:xRxARie/uSqjumqfPgTVNw==,type:str]
+    authentication.ldap.password.txt: ENC[AES256_GCM,data:ZTi0esuzwUXmRXRHqFCdgW5yxv1xXkna32sXJ3qv,iv:BWe8om8pN8bbYxxSPf9CO7y9xobpCaxV2rpAuT9OLuQ=,tag:O0ykTzw6cjZ6XC4VwOD1cw==,type:str]
+    storage.encryption.key: ENC[AES256_GCM,data:BGbCbWUTEB1UFuQXHtd0iYvmYb9piDI4SljScLQE,iv:rA6VDWiHehQqBNQtISXoPxT6vMGrmlB3qx61D735qs4=,tag:xby4EkaMIbCw/fYqUR7dgQ==,type:str]
+    storage.postgresql.password: ENC[AES256_GCM,data:kNEvxAGcdHqTyD4YsxQm/389HTXu5vzlA75wRdrQ,iv:vq/T0hae0e/RAcSJKweVdmIMZvVd0J/C3Wv5HwgShGE=,tag:bgL7NdUEnsje5wS4Yu6FwQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +20,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3TkJlQ3JhdUU0emtuRVdH
-            cC9ja0d0TytIOHAxdkZHbGkrNk0yQWVhM0hnCmtlbVg5TjFUS3h0bmRRdVdXMUpB
-            bVhWRHBvVEwrcDRSSmJPRG1TSHV0N3MKLS0tIEdYVDVWNTk3YW5jQkFSTDVUcEQx
-            MHhvUXNmTTFaYklqOUVDL1dzTVZDTGsKwQ4lREmBjKaMmdo5QVRfwEp0yNZO2r4S
-            FPNSuvGw+8LfJwNBdXH79p1bgIB4/jpWZ/idUKZTShRGPHsf/6m2TA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMVWt4OEtIZGhVUnFRb0Fw
+            eXRCT083KzFjaTV3NzF2azBSTDY2RndIZnp3CmwvZ3Nab3p6L3l6SmQ5SmhBQ0N1
+            amM4ZGxtSnFYempYcWl3ZjhMdlNtaWcKLS0tIEwxWS9ieDJ3Z29xNHoxZWE4Mmcw
+            UzJuUHZ3SFpJUWFDVnZ4N2JiYnNHbjAKIApXmLvoi1qnFv3DkXkvIpOoFSZLd6B4
+            Z11DHdvJZfhNJ9uaIiEghUJxkcvd5xOedlisTOcdvWqEHJh8KAM7HQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-18T04:10:08Z"
-    mac: ENC[AES256_GCM,data:StDcC4q35jQD3gC18IjOuZU9WnOLMoOweTF2C6wDCEpi23B/PXWSYP2ZTihG4OtMVnBpjnRsW+Y92g0Hkl9d6ydJJGtQ1gZnojh4P2UabWlkVIDs10OJT/2m2bGFX2YMo81OoZ+wbzgkvJ+J201j57BAST0jY9fR3n4X0UvgzlE=,iv:tFV95ejduX0hyBhZvuwrjY42CPrLX8Ane0XI1WJZgFo=,tag:wHfXlhtVj1ZokcxpW7mfwg==,type:str]
+    lastmodified: "2024-05-18T04:12:32Z"
+    mac: ENC[AES256_GCM,data:wAEuprbfGAYs0mxA0if6zpGx0lgHF5FAlKyt4iuaZ53/Ox+ZLGOvjJ85GsjLg6nWZ2xBTPg1Ts1q+Gup0oM8j3o4ZfUTgDaVzC9n+SIN09gSDgJb10phXBTH5h8Poo7Sz+2+5fadmLzyE+BchdiztXFn+7kQjnEEUufK6QkNTaA=,iv:lzCVTYMrtfUXmCM3+c9VK9a37guBAnILSL1A0znXFII=,tag:Q419PpA0AFlRW2CQJkJm2g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
