fix more authelia secret stuff

--- a/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:3dpn59nCCv0/e32jh07/Hvr8eWq9vT67UzpGSa6cnlEs2bNbkDOEYUssQPFWkReEMRWhB7LqkEgc8AoTyBYarNfBGDiqcdLTQHq5WbKYlNIiA5cUMqML+uAR,iv:fvwcVkRHqrX1TTW92/zFLTkQbZNWZ5CGhHamgoSx/z0=,tag:dV2D208H71alp3BWljcy+A==,type:str]
-    session.encryption.key: ENC[AES256_GCM,data:9ROvvuIVESSqJMsN03UqMPzcTuiNJuIHYuKqjbtf,iv:mAfjdRHgszVuSmqv76D0UCc23lUFAYlDbx2I+6u8Cug=,tag:oeMCo7o6bLvRQtLBs1oGbQ==,type:str]
-    session.redis.password: ENC[AES256_GCM,data:E+ZJvtqBTBl6hBn01Do/47YX4BuslRZrAfKj1kAW,iv:P4qoPEsHZwsmp43tP9sK8HKd2kjUGMAw//uxA8rKCF4=,tag:xRxARie/uSqjumqfPgTVNw==,type:str]
-    authentication.ldap.password.txt: ENC[AES256_GCM,data:ZTi0esuzwUXmRXRHqFCdgW5yxv1xXkna32sXJ3qv,iv:BWe8om8pN8bbYxxSPf9CO7y9xobpCaxV2rpAuT9OLuQ=,tag:O0ykTzw6cjZ6XC4VwOD1cw==,type:str]
-    storage.encryption.key: ENC[AES256_GCM,data:BGbCbWUTEB1UFuQXHtd0iYvmYb9piDI4SljScLQE,iv:rA6VDWiHehQqBNQtISXoPxT6vMGrmlB3qx61D735qs4=,tag:xby4EkaMIbCw/fYqUR7dgQ==,type:str]
-    storage.postgresql.password: ENC[AES256_GCM,data:kNEvxAGcdHqTyD4YsxQm/389HTXu5vzlA75wRdrQ,iv:vq/T0hae0e/RAcSJKweVdmIMZvVd0J/C3Wv5HwgShGE=,tag:bgL7NdUEnsje5wS4Yu6FwQ==,type:str]
+    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:bfKWaMaOnlCvz23/2ZEvuAtIElhL1dnbMz7Uw7Y5HJPHB4ThjdjrHmdXkj2wlhmryd0wwf2JjQWGjl7D77hECkNG7w0ksdot7wXqAbh6KcyMFSSUgrcjCI9H,iv:vz9/7E8FUbsy1Eksixs/brx51cgJNhgA1FiKYh0Wfqw=,tag:yRkh9r1oLDXjmWEpPh2EYA==,type:str]
+    session.encryption.key: ENC[AES256_GCM,data:tkbxigwZuNJ3kZqpgvXQqR1YCi54/6rj4vxehhzI,iv:Q6pUq934jhpnRyD8BNF5DCEYGAW7Njn8SeY5dVjBdRU=,tag:QypFek5zigCMkzSZ2mwh9A==,type:str]
+    session.redis.password.txt: ENC[AES256_GCM,data:nIeOtsJ3uysp+/E0w9J1DHc0jGIZ7mlBX+mLYjg/,iv:qjol+aK88LM4UlCpTr8eTRiQUUGhos1SUp4aaTL5XlU=,tag:LhBoyANp2545PZ6FAzj2nQ==,type:str]
+    authentication.ldap.password.txt: ENC[AES256_GCM,data:vbqrdUK2aNoT/+caJuJs671qRx53/vVrlph2FpSf,iv:zdgAXbPk/GI29Lc8yaIGpNAwck9yTuXgBJjAlSClMGQ=,tag:ngM46ijHGivlOGgZ0xbk0g==,type:str]
+    storage.encryption.key: ENC[AES256_GCM,data:1F0rLIJ8myF9SErNls24Em2yRgn8HhGWv2c5O0sf,iv:QBN6rN8ymZjeupOTYADNhmSqe5fWCkyI3ZMr5twQpaE=,tag:7EdjSXo8Bqa0isn6f80USQ==,type:str]
+    storage.postgresql.password: ENC[AES256_GCM,data:fGS4FVk7LgtfqXfWyKbEcd/QrvIccjB2TxiUomFP,iv:Bv3bLtvbiv8fwlf9zEYNl6/tKQBPdhhUAlY8YQfLLII=,tag:BbnSShjSK5YiUN5iPe93MA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +20,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMVWt4OEtIZGhVUnFRb0Fw
-            eXRCT083KzFjaTV3NzF2azBSTDY2RndIZnp3CmwvZ3Nab3p6L3l6SmQ5SmhBQ0N1
-            amM4ZGxtSnFYempYcWl3ZjhMdlNtaWcKLS0tIEwxWS9ieDJ3Z29xNHoxZWE4Mmcw
-            UzJuUHZ3SFpJUWFDVnZ4N2JiYnNHbjAKIApXmLvoi1qnFv3DkXkvIpOoFSZLd6B4
-            Z11DHdvJZfhNJ9uaIiEghUJxkcvd5xOedlisTOcdvWqEHJh8KAM7HQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyNmhzZk1uVURkaGN0TkhH
+            djhaT1JxNUFzYTFxWnZ6Tlc0VTVxSTFuUlZNCitvSGpmTEhoa2dmR20wdWFpaXJJ
+            N3JYNW11ZzNPTVhETWRWbjZwd2RXRXMKLS0tIFdod1Y2VkhUeEhiU1BuN0JEeTlR
+            QUtuRWM0ek03UVYyYmRkTjhTVGF5ZzAKVDISR2DfkbdA5rnU67LSvfLuzeOaMvPB
+            KYeBWlYjxnSnu+AiOndWJqirtRPTufKmRtEXuCSzbnPcsNQRtscREg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-18T04:12:32Z"
-    mac: ENC[AES256_GCM,data:wAEuprbfGAYs0mxA0if6zpGx0lgHF5FAlKyt4iuaZ53/Ox+ZLGOvjJ85GsjLg6nWZ2xBTPg1Ts1q+Gup0oM8j3o4ZfUTgDaVzC9n+SIN09gSDgJb10phXBTH5h8Poo7Sz+2+5fadmLzyE+BchdiztXFn+7kQjnEEUufK6QkNTaA=,iv:lzCVTYMrtfUXmCM3+c9VK9a37guBAnILSL1A0znXFII=,tag:Q419PpA0AFlRW2CQJkJm2g==,type:str]
+    lastmodified: "2024-05-18T04:17:57Z"
+    mac: ENC[AES256_GCM,data:KalysstaJmG/1iLD/E7gi4TRxTtC1ryp1SxWNK3l4b5CxhpefmcVlIJ4tz90i+lQYgSoYf3+2Oqg5wGoxhsv6D3buJVlhVkwfhqQC/RUihYZCHzBDwz/exzVZ3Xrjy9hwF5ABhKMKpJ01jarCTaVVAlK3nj/5D/BF2MKLTNL51w=,iv:XQ8UyNy7VB2MET5YM8f7xJLkROMjHJMHzhd3F5lYqgI=,tag:Hado/SokeDeOo9B5geM/Wg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
