--- a/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:bfKWaMaOnlCvz23/2ZEvuAtIElhL1dnbMz7Uw7Y5HJPHB4ThjdjrHmdXkj2wlhmryd0wwf2JjQWGjl7D77hECkNG7w0ksdot7wXqAbh6KcyMFSSUgrcjCI9H,iv:vz9/7E8FUbsy1Eksixs/brx51cgJNhgA1FiKYh0Wfqw=,tag:yRkh9r1oLDXjmWEpPh2EYA==,type:str]
-    session.encryption.key: ENC[AES256_GCM,data:tkbxigwZuNJ3kZqpgvXQqR1YCi54/6rj4vxehhzI,iv:Q6pUq934jhpnRyD8BNF5DCEYGAW7Njn8SeY5dVjBdRU=,tag:QypFek5zigCMkzSZ2mwh9A==,type:str]
-    session.redis.password.txt: ENC[AES256_GCM,data:nIeOtsJ3uysp+/E0w9J1DHc0jGIZ7mlBX+mLYjg/,iv:qjol+aK88LM4UlCpTr8eTRiQUUGhos1SUp4aaTL5XlU=,tag:LhBoyANp2545PZ6FAzj2nQ==,type:str]
-    authentication.ldap.password.txt: ENC[AES256_GCM,data:vbqrdUK2aNoT/+caJuJs671qRx53/vVrlph2FpSf,iv:zdgAXbPk/GI29Lc8yaIGpNAwck9yTuXgBJjAlSClMGQ=,tag:ngM46ijHGivlOGgZ0xbk0g==,type:str]
-    storage.encryption.key: ENC[AES256_GCM,data:1F0rLIJ8myF9SErNls24Em2yRgn8HhGWv2c5O0sf,iv:QBN6rN8ymZjeupOTYADNhmSqe5fWCkyI3ZMr5twQpaE=,tag:7EdjSXo8Bqa0isn6f80USQ==,type:str]
-    storage.postgresql.password: ENC[AES256_GCM,data:fGS4FVk7LgtfqXfWyKbEcd/QrvIccjB2TxiUomFP,iv:Bv3bLtvbiv8fwlf9zEYNl6/tKQBPdhhUAlY8YQfLLII=,tag:BbnSShjSK5YiUN5iPe93MA==,type:str]
+    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:EHuNU1g25EWcyMHPqfiYbQgq7x5l/OK6gv2VpZPl+AOPpqrsa1i0E+rZ1Fy2A24eDBFynxpl5SWobRL21ker2AfN9vXtJICeduW1bEHGoTzoeZITv++rIVke,iv:2dogqs7FdCMILfLODFOQ/HwoyyQNp18N8HchOHr0oO8=,tag:adBFpeN4OmgUbWDzrzOcZQ==,type:str]
+    session.encryption.key: ENC[AES256_GCM,data:qTWqDK4sLwHavgwL1M4SbZppLfBz4edueB6UG1/k,iv:/QnIiLm5DveNRTWRYiJ1nE44v0TYBFCeZLSXL101MZs=,tag:Spl2y5qG2C6men9v3yESPw==,type:str]
+    session.redis.password.txt: ENC[AES256_GCM,data:pQvd0okVUHBR4CrAvwJBwWSfBD5GkAbQ/3pT/rh0,iv:Ue+7SNUTsFwZKhlwgoBf5HDAccxiez/iwz8Eswzkzmk=,tag:m+a21U6cAsaZgQN5guP8+Q==,type:str]
+    authentication.ldap.password.txt: ENC[AES256_GCM,data:q8tYuSUFQJ3Jdr5EOfLVMgeip04HAr/usNHeajzo,iv:tUAIVDsY1Dyy5+bW9uzojEt/3Sl8lf4rNtMHxmz2my4=,tag:Y80hkvF70B9h+OHbY5xqMw==,type:str]
+    storage.encryption.key: ENC[AES256_GCM,data:OzYgzZItaZeQV73e48INaRsW+3CpNDy5JeUa8iDd,iv:CfZUS+CgfwNoun6JTtpqiZcFDxiAMTOrIge3pB9G13Y=,tag:QoyYrB2IFeT6FP68NiGLJA==,type:str]
+    storage.postgresql.password.txt: ENC[AES256_GCM,data:aRENQRc2OtnG2dvcpTfhXvw1qUGkzdCzl4tSYzQg,iv:RyUdEx5bLsiIiEsQGpizytm4q/2h8iw7hUfoyPLUiUk=,tag:6W0V4VfG7ZCyXZHFQAzezQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +20,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyNmhzZk1uVURkaGN0TkhH
-            djhaT1JxNUFzYTFxWnZ6Tlc0VTVxSTFuUlZNCitvSGpmTEhoa2dmR20wdWFpaXJJ
-            N3JYNW11ZzNPTVhETWRWbjZwd2RXRXMKLS0tIFdod1Y2VkhUeEhiU1BuN0JEeTlR
-            QUtuRWM0ek03UVYyYmRkTjhTVGF5ZzAKVDISR2DfkbdA5rnU67LSvfLuzeOaMvPB
-            KYeBWlYjxnSnu+AiOndWJqirtRPTufKmRtEXuCSzbnPcsNQRtscREg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZNGJsckJNWkJGWVZpS2VU
+            VlVoSVpoTnExWTR2emZPN2ZtMGdyVmhsVGgwCi8weHRwVmRWMUpJNDlSZUNybm5o
+            S3RWTXdqTzVPSmRkRXF3TUxnVUVBb3MKLS0tIDJDK3BFMHZ5MjNCQythaDVERktX
+            YUVScUswY3c5ZU5NNTV1WXNWeHJrWjQKQQfJ87TNhIhYnG1yrjA0xuzWUrgTZsdb
+            uHDC0vsAF+a1hP12xM0bGgPDPwML/JfCDU/mQ9UOplpgkPfs2ALpKQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-18T04:17:57Z"
-    mac: ENC[AES256_GCM,data:KalysstaJmG/1iLD/E7gi4TRxTtC1ryp1SxWNK3l4b5CxhpefmcVlIJ4tz90i+lQYgSoYf3+2Oqg5wGoxhsv6D3buJVlhVkwfhqQC/RUihYZCHzBDwz/exzVZ3Xrjy9hwF5ABhKMKpJ01jarCTaVVAlK3nj/5D/BF2MKLTNL51w=,iv:XQ8UyNy7VB2MET5YM8f7xJLkROMjHJMHzhd3F5lYqgI=,tag:Hado/SokeDeOo9B5geM/Wg==,type:str]
+    lastmodified: "2024-05-18T04:21:08Z"
+    mac: ENC[AES256_GCM,data:5Yy77amxpLNJ7sWbgo3DRYiS5BLei8xH+LazDRip3SoB+HvUe7RuUvZIVWZ0duFkJ3VXT1t1twYik2Me8o3/lXppKcWUwyTED5D5NSP8Wx2vFEhMYkAHlugjxLt2q0v/i+TFUEeVrsOpbbSHPWR3xG0N/Hl+81Jh2IXg1pZTzPE=,iv:tHRE3VU7be8lLi7gaMzFX3QYH2jY+7FNI+FWyfWY+O4=,tag:gkJNY/na9KxiKh5frT4uUw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
